--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWG/CW_CWG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWG/CW_CWG.cshtml
@@ -87,8 +87,12 @@
                     <span class="spanFWCZ">身份</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgGRZR" /><label class="labelFWCZ">&nbsp;&nbsp;个人转让</label>
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_sf_grzr">
+                        <img class="iFWCZ" id="img_sf_grzr" /><label class="labelFWCZ">个人转让</label>
+                    </div>
+                    <div class="div_radio" id="div_sf_sjzr">
+                        <img class="iFWCZ" id="img_sf_sjzr" /><label class="labelFWCZ">商家转让</label>
+                    </div>
                 </div>
             </div>
             <div id="divCWGPZ" class="divFWCZ" style="z-index: 999">
@@ -185,8 +189,12 @@
                     <span class="spanFWCZ">驱虫情况</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgYQC" /><label class="labelFWCZ">&nbsp;&nbsp;已驱虫</label>
-                    <img class="iFWCZ" id="imgWQC" /><label class="labelFWCZ">&nbsp;&nbsp;未驱虫&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_qcqk_yqc">
+                        <img class="iFWCZ" id="img_qcqk_yqc" /><label class="labelFWCZ">已驱虫</label>
+                    </div>
+                    <div class="div_radio" id="div_qcqk_wqc">
+                        <img class="iFWCZ" id="img_qcqk_wqc" /><label class="labelFWCZ">未驱虫</label>
+                    </div>
                 </div>
             </div>
             <div id="divCWGYMQK" class="divFWCZ" style="z-index: 993;">
@@ -220,8 +228,12 @@
                     <span class="spanFWCZ">QQ视频看狗</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgZC" /><label class="labelFWCZ">&nbsp;&nbsp;支持</label>
-                    <img class="iFWCZ" id="imgBZC" /><label class="labelFWCZ">&nbsp;&nbsp;不支持&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_spkg_zc">
+                        <img class="iFWCZ" id="img_spkg_zc" /><label class="labelFWCZ">支持</label>
+                    </div>
+                    <div class="div_radio" id="div_spkg_bzc">
+                        <img class="iFWCZ" id="img_spkg_bzc" /><label class="labelFWCZ">不支持</label>
+                    </div>
                 </div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
