--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PWKQ_YCMP/PWKQ_YCMP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PWKQ_YCMP/PWKQ_YCMP.cshtml
@@ -90,8 +90,12 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgZR"/><label class="labelFWCZ">&nbsp;&nbsp;转让</label>
-                    <img class="iFWCZ" id="imgQG"/><label class="labelFWCZ">&nbsp;&nbsp;求购&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_gq_zr">
+                        <img class="iFWCZ" id="img_gq_zr" /><label class="labelFWCZ">转让</label>
+                    </div>
+                    <div class="div_radio" id="div_gq_qg">
+                        <img class="iFWCZ" id="img_gq_qg" /><label class="labelFWCZ">求购</label>
+                    </div>
                 </div>
             </div>
             <div id="divYCMPLB" class="divFWCZ" style="z-index: 999">
