--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWZSLY/CW_CWZSLY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWZSLY/CW_CWZSLY.cshtml
@@ -87,8 +87,12 @@
                     <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgZS" /><label class="labelFWCZ">&nbsp;&nbsp;赠送</label>
-                    <img class="iFWCZ" id="imgLY" /><label class="labelFWCZ">&nbsp;&nbsp;领养&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_gq_zs">
+                        <img class="iFWCZ" id="img_gq_zs" /><label class="labelFWCZ">赠送</label>
+                    </div>
+                    <div class="div_radio" id="div_gq_ly">
+                        <img class="iFWCZ" id="img_gq_ly" /><label class="labelFWCZ">领养</label>
+                    </div>
                 </div>
             </div>
             <div id="divFYBT" class="divFWCZ" style="margin-top: 22px;">
