--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/LR/LR_WD.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/LR/LR_WD.css
@@ -48,12 +48,21 @@
     border: none !important;
 }
 
-.img_WDYJLB {
+.img_WDLB {
     width: 16px;
     height: 16px;
     cursor: pointer;
     border: none !important;
     margin-right: 5px;
+}
+
+.liWDLB {
+    display: inline-block;
+    width: 105px;
+    height: 30px;
+    text-align: left;
+    margin-top: 4px;
+    cursor: pointer;
 }
 
 .spanFWQK {
