--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL_HPG/XXYL_HPG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL_HPG/XXYL_HPG.cshtml
@@ -134,12 +134,12 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divSNSBLB" class="divFWCZ" style="z-index: 996; height: 92px;">
+            <div id="divSNSB" class="divFWCZ" style="z-index: 996; height: 92px;">
                 <div class="divLeft">
                     <span class="required">*</span>
-                    <span id="spanSNSBLB">室内设备</span>
+                    <span id="spanSNSB">室内设备</span>
                 </div>
-                <div id="divSNSBLBText" class="divRight" style="position: relative; ">
+                <div id="divSNSBText" class="divRight" style="position: relative; ">
                 </div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
