--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/LR/LR_MRHF.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/LR/LR_MRHF.css
@@ -56,6 +56,15 @@
     margin-right: 5px;
 }
 
+.liMRHFLB {
+    display: inline-block;
+    width: 105px;
+    height: 30px;
+    text-align: left;
+    margin-top: 4px;
+    cursor: pointer;
+}
+
 .spanFWQK {
     display: inline-block;
     width: 120px;
