--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/QZZP/QZZP_JZZP.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/QZZP/QZZP_JZZPYZ.js")"></script>
-    
+
 
     <link href="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/jquery-ui-1.12.1.custom/jquery-ui.min.js")"></script>
@@ -150,8 +150,12 @@
                     <span class="spanFWCZ">兼职有效期</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgDQZP" /><label class="labelFWCZ">&nbsp;&nbsp;短期招聘&nbsp;&nbsp;</label>
-                    <img class="iFWCZ" id="imgCQZP" /><label class="labelFWCZ">&nbsp;&nbsp;长期招聘</label>
+                    <div class="div_radio" id="div_jzyxq_dqzp">
+                        <img class="iFWCZ" id="img_jzyxq_dqzp" /><label class="labelFWCZ">短期招聘</label>
+                    </div>
+                    <div class="div_radio" id="div_jzyxq_cqzp">
+                        <img class="iFWCZ" id="img_jzyxq_cqzp" /><label class="labelFWCZ">长期招聘</label>
+                    </div>
                 </div>
             </div>
             <div id="divDQJZSJ" class="divFWCZ" style="z-index: 997">
