--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_CLFW_JX/SHFW_CLFW_JX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_CLFW_JX/SHFW_CLFW_JX.cshtml
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SHFW/SHFW_CLFW_JX.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SHFW/SHFW_CLFW_JXYZ.js")"></script>
-    
+
 </head>
 <body>
     <div>
@@ -99,8 +99,12 @@
                     <span class="spanFWCZ">类别</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgJXZS" /><label class="labelFWCZ">&nbsp;&nbsp;驾校招生</label>
-                    <img class="iFWCZ" id="imgJLZS" /><label class="labelFWCZ">&nbsp;&nbsp;教练招生&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_lb_jxzs">
+                        <img class="iFWCZ" id="img_lb_jxzs" /><label class="labelFWCZ">驾校招生</label>
+                    </div>
+                    <div class="div_radio" id="div_lb_jlzs">
+                        <img class="iFWCZ" id="img_lb_jlzs" /><label class="labelFWCZ">教练招生</label>
+                    </div>
                 </div>
             </div>
             <div id="divJZ" class="divFWCZ" style="z-index: 993;">
