--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_WXFW_JDWX/SHFW_WXFW_JDWX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_WXFW_JDWX/SHFW_WXFW_JDWX.cshtml
@@ -123,8 +123,12 @@
                     <span class="spanFWCZ">是否上门</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgSMFW" /><label class="labelFWCZ">&nbsp;&nbsp;上门服务</label>
-                    <img class="iFWCZ" id="imgDDFW" /><label class="labelFWCZ">&nbsp;&nbsp;到店服务&nbsp;&nbsp;</label>
+                    <div class="div_radio" id="div_sfsm_smfw">
+                        <img class="iFWCZ" id="img_sfsm_smfw" /><label class="labelFWCZ">上门服务</label>
+                    </div>
+                    <div class="div_radio" id="div_sfsm_ddfw">
+                        <img class="iFWCZ" id="img_sfsm_ddfw" /><label class="labelFWCZ">到店服务</label>
+                    </div>
                 </div>
             </div>
             <div id="divFWQY" class="divFWCZ" style="z-index: 998">
