--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
@@ -131,7 +131,7 @@
                     </span>
                     <span id="spanPFM" class="span_spaninput" style="width: 198px">
                         <span class="spaninput_fontcolor" style="margin-left: 8px">共</span>
-                        <input id="PFM" maxlength="7" column="PFM" class="input_spaninput spaninput_fontcolor" type="text" />
+                        <input id="PFM" maxlength="7" column="PFM" class="input_spaninput spaninput_fontcolor" type="text" style="width: 100px;" />
                         <span class="spaninput_fontcolor">平（㎡）</span>
                     </span>
                     <div id="divFWLXTip" class="Warn"></div>
