--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWFW/CW_CWFW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWFW/CW_CWFW.cshtml
@@ -88,12 +88,12 @@
                 </div>
                 <div class="div_row_right">
                     <div id="divLBText" class="div_select_out SRK" style="position: relative;">
-                        <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <div id="divLBSpan" class="div_select_in">
                             <input type="hidden" id="LBID" />
-                            <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
+                            <span id="spanLB" class="span_select spaninput_fontcolor">请选择类别</span>
                             <div class="span_select_arrow"></div>
                         </div>
-                        <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divLB" class="div_select_dropdown">
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanJG" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="JG" maxlength="9" column="JG" type="text" />
                         <span class="spaninput_fontcolor">元</span>
                     </span>
                 </div>
