--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_BX/SWFW_BX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_BX/SWFW_BX.cshtml
@@ -10,9 +10,6 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/SWFW/SWFW_BX.css")" rel="stylesheet" />
-   
-
-    
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SWFW/SWFW_BX.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SWFW/SWFW_BXYZ.js")"></script>
     
@@ -100,14 +97,14 @@
                 <div class="div_row_right">
                     <div id="divLBText" class="div_select_out SRK" style="position: relative;">
                         <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input id="LBID" type="hidden" />
+                            <input id="LBID" type="hidden"/>
                             <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divXLText" class="div_select_out SRK" style="display: none;">
+                    <div id="divXLText" class="div_select_out SRK">
                         <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0px;">请选择小类</span>
                             <div class="span_select_arrow"></div>
