--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_GSZC/SWFW_GSZC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_GSZC/SWFW_GSZC.cshtml
@@ -10,9 +10,6 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <link href="@Url.Content("~/Areas/Business/Css/SWFW/SWFW_GSZC.css")" rel="stylesheet" />
-   
-
-    
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SWFW/SWFW_GSZC.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SWFW/SWFW_GSZCYZ.js")"></script>
     
@@ -88,7 +85,7 @@
                     <span id="spanBT">标题</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="BT" maxlength="50" column="BT" class="span_spaninput SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
+                    <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
                     <div id="divBTTip"></div>
                 </div>
             </div>
@@ -106,7 +103,7 @@
                     <span id="spanFWQY">服务区域</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="FWQY" column="FWQY" class="span_spaninput input_input SRK" type="text" placeholder="请输入服务区域" />
+                    <input id="FWQY" column="FWQY" class="input_input SRK" type="text" placeholder="请输入服务区域" />
                     <div id="divFWQYTip"></div>
                 </div>
             </div>
@@ -168,7 +165,7 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; position: relative;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -177,7 +174,7 @@
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; position: relative;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -194,7 +191,7 @@
                     <span id="spanLXDH">联系人</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="LXR" column="LXR" class="span_spaninput input_input SRK" type="text" placeholder="请输入联系人" />
+                    <input id="LXR" column="LXR" class="input_input SRK" type="text" placeholder="请输入联系人" />
                     <div id="divLXRTip"></div>
                 </div>
             </div>
@@ -204,7 +201,7 @@
                     <span id="spanLXDH">联系电话</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="LXDH" maxlength="11" column="LXDH" class="span_spaninput input_input SRK" type="text" placeholder="请输入联系电话" />
+                    <input id="LXDH" maxlength="11" column="LXDH" class="input_input SRK" type="text" placeholder="请输入联系电话" />
                     <div id="divLXDHTip"></div>
                 </div>
             </div>
@@ -214,7 +211,7 @@
                     <span id="spanQQ">QQ</span>
                 </div>
                 <div class="div_row_right">
-                    <input column="QQ" class="span_spaninput input_input SRK" type="text" placeholder="请输入QQ" />
+                    <input column="QQ" class="input_input SRK" type="text" placeholder="请输入QQ" />
                 </div>
             </div>
             <div id="divFB" class="div_split" style="display: block; text-align: center; margin-top: 40px;">
