--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
@@ -101,7 +101,7 @@
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="div_row_right">
-                    <div class="div_select_out" style="z-index: 1000; position: relative">
+                    <div class="div_select_out" style="z-index: 1000; position: relative; width:595px">
                         <div id="divXQMCText" class="div_select_in SRK" style="border: none;">
                             <input id="XQMC" maxlength="30" column="XQMC" class="span_spaninput SRK" style="width: 594px; margin-top: 0px; padding: 4px 12px; color: #999999;" type="text" placeholder="请输入小区名称" />
                         </div>
