--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/JYPX/JYPX_JJJG.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/JYPX/JYPX_JJJG.css
@@ -1,31 +1,10 @@
-﻿
-
-
-
-
-
-
-
-
-
-
-
-.img_KCTSLB {
+﻿.img_KCTSLB {
     width: 16px;
     height: 16px;
     cursor: pointer;
     border: none !important;
     margin-right: 5px;
 }
-
-
-
-
-
-
-
-
-
 
 
 
