--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
@@ -89,8 +89,9 @@
                         <img class="img_radio" id="img_czfs_ztcz" /><label class="label_radio">整套出租</label>
                     </div>
                     <div class="div_radio" id="div_czfs_lm">
-                        <img class="img_radio" id="img_czfs_djcz" /><label class="label_radio">单间出租</label>
+                        <img class="img_radio" id="img_czfs_djcz"/><label class="label_radio">单间出租</label>
                     </div>
+                    <div id="divCZFSTip" class="Warn" style="z-index: 1000; position: relative"></div>
                 </div>
             </div>
             <div id="divXQMC" class="div_row" style="z-index: 1000">
@@ -143,7 +144,7 @@
                 <div class="div_row_right">
                     <div id="divFWCXText" class="div_select_out">
                         <div id="divFWCXSpan" class="div_select_in SRK">
-                            <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">南北</span>
+                            <span id="spanFWCX" column="CX" class="span_select spaninput_fontcolor">请选择朝向</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divFWCX" class="div_select_dropdown">
@@ -151,7 +152,7 @@
                     </div>
                     <div id="divZXQKText" class="div_select_out">
                         <div id="divZXQKSpan" class="div_select_in SRK">
-                            <span id="spanZXQK" column="ZXQK" class="span_select spaninput_fontcolor">简单装修</span>
+                            <span id="spanZXQK" column="ZXQK" class="span_select spaninput_fontcolor">请选择装修情况</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divZXQK" class="div_select_dropdown">
@@ -159,12 +160,13 @@
                     </div>
                     <div id="divZZLXText" class="div_select_out">
                         <div id="divZZLXSpan" class="div_select_in SRK">
-                            <span id="spanZZLX" column="ZZLX" class="span_select spaninput_fontcolor">普通住宅</span>
+                            <span id="spanZZLX" column="ZZLX" class="span_select spaninput_fontcolor">请选择住宅类型</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divZZLX" class="div_select_dropdown">
                         </div>
                     </div>
+                    <div id="divFWQKTip" class="Warn"></div>
                 </div>
             </div>
             <div id="divLCFB" class="div_row" style="z-index: 998">
@@ -198,7 +200,7 @@
                     </span>
                     <div id="divYFFSText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
                         <div id="divYFFSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <span id="spanYFFS" column="YFFS" class="span_select spaninput_fontcolor" style="margin-top: 0">押一付一</span>
+                            <span id="spanYFFS" column="YFFS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择押付方式</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divYFFS" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
