--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -128,6 +128,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divLXTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divLSJY" class="div_row" style="z-index: 998;">
                 <div class="div_row_left" style="margin-left: 102px;">
