--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/YHGL/YHGL.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 </head>
-<body style="width: 100%; height: 100%; overflow-x:hidden;">
+<body style="width: 100%; height: 100%; overflow-x:hidden; background-color: #eeeff1;">
     <div id="divTop" class="div_top">
         <div class="div_top_left">
             <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
