--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/YHGL.css
@@ -54,8 +54,7 @@
 }
 
 .div_content {
-    width: 100%;
-    height: 960px;
+    height: 964px;
 }
 
 .div_left_menu {
@@ -68,7 +67,7 @@
 .ul_left_menu {
     display: block;
     padding: 20px 0 0 20px;
-    background-color: #fafafa;
+    background-color: #ffffff;
     margin-bottom: 0;
 }
 
