--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_XZL/FC_XZL.cshtml
@@ -12,7 +12,6 @@
     <link href="@Url.Content("~/Areas/Business/Css/FC/FC_XZL.css")" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_XZL.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FC/FC_XZLYZ.js")"></script>
-
 </head>
 <body>
     <div>
@@ -94,7 +93,7 @@
                 </div>
                 <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divLX" class="div_row" style="z-index: 999">
+            <div id="divXZLLX" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类型</span>
@@ -107,7 +106,7 @@
                         <img class="img_radio" id="img_gq_swzx" /><label class="label_radio">商务中心</label>
                     </div>
                 </div>
-                <div id="divLXTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                <div id="divXZLLXTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divKZCGS" class="div_row" style="z-index: 998">
                 <div class="div_row_left" style="margin-left: 86px;">
@@ -146,7 +145,7 @@
                     <span class="spanFWCZ">所在区域</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -155,7 +154,7 @@
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSQText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSQSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSQ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择商圈</span>
                             <div class="span_select_arrow"></div>
@@ -187,7 +186,7 @@
                     <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
                         <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 124px" />
                     </span>
-                    <div id="divZJDWText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divZJDWText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divZJDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanZJDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/天</span>
                             <div class="span_select_arrow"></div>
