--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_SP/FC_SP.cshtml
@@ -148,7 +148,7 @@
                     <span class="spanFWCZ">所在区域</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <input type="hidden" id="QYCode" />
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
@@ -157,7 +157,7 @@
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSQText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSQSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSQ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择商圈</span>
                             <div class="span_select_arrow"></div>
