--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
@@ -86,12 +86,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_gq_cz">
-                        <img class="img_radio" id="img_gq_cz" /><label class="label_radio">出租</label>
+                        <img class="img_radio" id="img_gq_cz"/><label class="label_radio">出租</label>
                     </div>
                     <div class="div_radio" id="div_gq_cs">
-                        <img class="img_radio" id="img_gq_cs" /><label class="label_radio">出售</label>
+                        <img class="img_radio" id="img_gq_cs"/><label class="label_radio">出售</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divLX" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -99,15 +100,20 @@
                     <span class="spanFWCZ">类型</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divCKCFTDCWLXText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div id="divCKCFTDCWLXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <span id="spanCKCFTDCWLX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类型</span>
-                            <div class="span_select_arrow"></div>
-                        </div>
-                        <div id="divCKCFTDCWLX" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
+                    <div class="div_radio" id="div_lx_ck">
+                        <img class="img_radio" id="img_lx_ck" /><label class="label_radio">仓库</label>
+                    </div>
+                    <div class="div_radio" id="div_lx_cf">
+                        <img class="img_radio" id="img_lx_cf"/><label class="label_radio">厂房</label>
+                    </div>
+                    <div class="div_radio" id="div_lx_td">
+                        <img class="img_radio" id="img_lx_td"/><label class="label_radio">土地</label>
+                    </div>
+                    <div class="div_radio" id="div_lx_cw">
+                        <img class="img_radio" id="img_lx_cw" /><label class="label_radio">车位</label>
                     </div>
                 </div>
+                <div id="divLXTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
             <div id="divJBXX" class="div_split" style="display: block; text-align: left">
                 <span class="span_split">基本信息</span>
@@ -178,7 +184,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanSJ" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="SJ" maxlength="9" column="SJ" type="text" style="width: 80px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="SJ" maxlength="9" column="SJ" type="text" style="width: 100px" />
                         <span class="spaninput_fontcolor">万元</span>
                     </span>
                 </div>
